# NetworkPuzzles

./: .gitignore  README.md  buildozer.spec  pyinstaller-dir.spec  pyinstaller.spec  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: build-apk-docker-image.yml  build-apk-system.yml  build-apk-ubuntu-2404.yml  build-apk-ubuntu-2604.yml  build-apk.yml  build-exe-pyinstaller.yml  release-drafter.yml  run-tests.yml
buildozer/: Dockerfile
data/: NBIcoLG.xcf
scripts/: adb-install-app.sh  adb-run-app.sh  adb-stop-app.sh  build-apk.sh  img2ico.py  read-prof.py  run-desktop.sh  run-mobile.sh  run-tests.sh  test-puzzles.sh  update-locales.sh
src/: main.py
src/network_puzzles/: __init__.py  __main__.py  core.py  device.py  gui.py  gui_base.py  gui_buttons.py  gui_labels.py  gui_layouts.py  gui_popups.py  interface.py  link.py  messages.py  nettests.py  networkpuzzles.kv  nic.py  packet.py  parser.py  puzzle.py  route.py  shape.py  ui.py  util.py  vars.py
tests/: __init__.py  test_core.py  test_device.py  test_gui_base.py  test_link.py  test_nic.py  test_packet.py  test_parser.py  test_puzzle.py  test_util.py
tests/solutions/: Level0_BadPower1  Level0_BadPower1_NOT  Level0_BadPower1a_NOT  Level0_BadPower2  Level0_BrokenLink  Level0_BrokenLink_NOT  Level0_Frozen  Level0_Frozen_NOT  Level0_HiddenSwitch  Level0_HiddenSwitch_NOT  Level0_HubVsSwitch  Level0_IP  Level0_NeedsLink.txt  Level0_NetworkLoop2  Level0_NetworkLoop2_NOT  Level0_NoSwitch  Level0_PacketCorruption1  Level0_PacketCorruption1_NOT  Level0_PacketCorruption2  Level0_Ping  Level0_Power  Level0_Power_NOT  Level0_SimpleDHCP  Level0_SimpleDHCP_NOT  Level0_Traceroute  Level1_AddingDevices  Level1_BadIP  (+74 more)
(+139 files in other folders)
