[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "network_puzzles"
authors = [
    {name = "Tim Young"},
    {name = "Nate Marti", email = "nate_marti@sil.org"},
]
description = "A simple program for teaching network principles"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "kivy",
    "packaging",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
build = [
    "buildozer",
    "pyinstaller",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/plain"}
version = {attr = "network_puzzles.__version__"}

[tool.ruff]
builtins = ["_"]

[tool.ruff.format]
# Preserve quote style in code b/c xgettext doesn't recognize `_('text')` strings.
quote-style = "preserve"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"pyinstaller*.spec" = ["F821"]
